# mat271project

./: .gitignore  .python-version  README.md  classifier.ipynb  dataset.py  flatvel_test.ipynb  main.py  pyproject.toml  requirements.txt  train.py  train_upfwi.py
Invnet_models/wavelet_test_1/: checkpoint.pth  model_10.pth  model_20.pth  model_30.pth  model_40.pth  model_50.pth
Invnet_models/wavelet_test_1/logs/train/: events.out.tfevents.1749676695.Ian-Desktop.31377.0  events.out.tfevents.1749676765.Ian-Desktop.31885.0  events.out.tfevents.1749677445.Ian-Desktop.35949.0  events.out.tfevents.1749677605.Ian-Desktop.36584.0  events.out.tfevents.1749677756.Ian-Desktop.37086.0  events.out.tfevents.1749677916.Ian-Desktop.37618.0  events.out.tfevents.1749678000.Ian-Desktop.37912.0  events.out.tfevents.1749678027.Ian-Desktop.38027.0  events.out.tfevents.1749678088.Ian-Desktop.38249.0  events.out.tfevents.1749678332.Ian-Desktop.39046.0  events.out.tfevents.1749678375.Ian-Desktop.39199.0  events.out.tfevents.1749678458.Ian-Desktop.39518.0
Invnet_models/wavelet_test_2/: checkpoint.pth  model_40.pth
Invnet_models/wavelet_test_2/logs/train/: events.out.tfevents.1749680177.Ian-Desktop.48645.0
Invnet_models/wavelet_test_3/: checkpoint.pth
Invnet_models/wavelet_test_3/logs/train/: events.out.tfevents.1749708192.Ian-Desktop.47344.0  events.out.tfevents.1749708770.Ian-Desktop.1200.0  events.out.tfevents.1749708979.Ian-Desktop.398.0  events.out.tfevents.1749709081.Ian-Desktop.406.0  events.out.tfevents.1749709137.Ian-Desktop.382.0  events.out.tfevents.1749709226.Ian-Desktop.391.0  events.out.tfevents.1749709352.Ian-Desktop.399.0  events.out.tfevents.1749709479.Ian-Desktop.398.0  events.out.tfevents.1749709558.Ian-Desktop.467.0  events.out.tfevents.1749709795.Ian-Desktop.422.0  events.out.tfevents.1749709882.Ian-Desktop.400.0  events.out.tfevents.1749709905.Ian-Desktop.431.0  events.out.tfevents.1749709940.Ian-Desktop.459.0  events.out.tfevents.1749710255.Ian-Desktop.664.0  events.out.tfevents.1749710869.Ian-Desktop.995.0  events.out.tfevents.1749710937.Ian-Desktop.1046.0  (+42 more)
split_files/: curvevel_a_train.txt  curvevel_a_val.txt  curvevel_b_train.txt  curvevel_b_val.txt  flatfault_a_train.txt  flatfault_a_val.txt  flatfault_b_train.txt  flatfault_b_val.txt  flatvel_a_train.txt  flatvel_a_val.txt  flatvel_b_train.txt  flatvel_b_val.txt
(+32 files in other folders)
