[project]
name = "mat271-fwi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "network>=0.1",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytorch-wavelets>=1.3.0",
    "pytz==2025.2",
    "pywavelets==1.8.0",
    "scikit-learn>=1.7.0",
    "scipy==1.15.3",
    "six==1.17.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tzdata==2025.2",
    "utils>=1.0.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-macos", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-macos", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-macos"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true
